# tennis-serve-analyzer

./: .gitignore  CLAUDE.md  README.md  analyze_metrics.py  app.py  detect_contact.py  extract_pose.py  generate_feedback.py  generate_training_plan.py  main.py  pyproject.toml  requirements.txt  tennis_mcp_client.py  tennis_mcp_server.py
knowledge_base/: drills.json
